# catnip

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  catnip  install.sh
src/: args.rs  main.rs  util.rs
