[package]
name = "fetchcat"
version = "0.1.0"
authors = ["elric <elric.thatonemail@gmail.com>"]
edition = "2021"
descrition = "Simple fetch displaying system information and a cute cat."
homepage = "https://github.com/onelric/fetchcat"
license = "MIT"

[dependencies]
ansi_term = "0.12.1"
os_info = "3.8.2"
systemstat = "0.2.3"
