[package]
name = "fetch-catnip"
version = "0.1.3"
authors = ["elric <elric.thatonemail@gmail.com>"]
edition = "2021"
description = "Simple fetch displaying system information and a cute cat."
homepage = "https://github.com/onelric/catnip"
repository = "https://github.com/onelric/catnip"
license = "MIT"

[dependencies]
ansi_term = "0.12.1"
os_info = "3.8.2"
systemstat = "0.2.3"
getopts = "0.2"

[[bin]]
name = "catnip"
path = "src/main.rs"
